# silentwitness

./: .dockerignore  .gitguardian.yml  .gitguardianignore  .gitignore  .gitleaks.toml  .license-allowlist.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  NOTICES.md  README.md  STRATEGY.md  docker-compose.yml  install.sh  justfile  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
.pre-commit-hooks/: file-size-guard.py  forbidden-paths.py
apps/site/: .gitignore  README.md  next.config.ts  package.json  source.config.ts  tsconfig.json
claude-code-config/: CLAUDE.md  settings.json
context/: COMPLETENESS.md  README.md
context/.raw-design-research/: 01-rules-model-agnostic-verification.md  02-model-agnostic-agent-libraries-survey.md  03-sift-2026-tool-catalog-verified.md
context/competitive/: 11-reference-implementations-decomposed.md
context/domain/: 01-dfir-foundations.md  02-windows-artifacts-encyclopedia.md  03-memory-forensics-deep.md  04-disk-network-log-forensics-deep.md  05-anti-forensics-and-attack-patterns.md  06-sift-toolchain-deep.md
context/evaluation/: 10-datasets-and-evaluation-methodology.md
context/reference/: 13-source-corpus.md
context/stakeholders/: 12-judges-curriculum-and-legal-landscape.md
context/technical/: 07-mcp-and-agent-platforms.md  08-llm-failure-modes-in-agentic-systems.md
context/user/: 09-ir-consultant-reality.md
design/: .thumbnail  FirewallAnimation.dc.html  SilentWitness.dc.html  SilentWitnessAssets.dc.html
docs/: ACCURACY_REPORT.md  AUDIT_REPORT.md  BRAINSTORM.md  CICD_SPEC.md  DATASET.md  DATASETS.md  DEMO_ARTIFACTS.md  DESIGN_BRIEF.md  DEVPOST.md  DEVPOST_DRAFT.md  PRD.md  SETUP_GUIDE.md  STARTER_CASES.md  THREE_CLAIM_TRACE.md  TRY_IT_OUT.md  architecture.md  devpost-submission-checklist.md  epics.md  sprint-status.yaml  ux-spec.md
docs/.audit/: 03-volatility3-verification.md  04-ez-tools-verification.md  06-sift-and-datasets-verification.md
docs/EXAMPLE_EXECUTION_LOGS/: README.md
docs/diagrams/: architecture.mmd
docs/execution_logs/: index_tool_executions.jsonl
docs/internal/: CLAUDE.md  DEEP_AUDIT_REPORT.md  PRD.md  STRATEGY-v1.md
docs/showcase_runs/: README.md
docs/stories/: story-accuracy-report-writeup.md  story-approve-finding-tool.md  story-atomic-io.md  story-audit-logger.md  story-baseline-runner.md  story-case-trapdoor-synthesis.md  story-chainsaw-hunt.md  story-citation-gate.md  story-cli-approve.md  story-cli-baseline-comparison.md  story-cli-export.md  story-cli-init.md  story-cli-install-claude-code.md  story-cli-review.md  story-cli-status.md  story-cli-verify.md  story-common-types.md  story-critic-verdict-handling.md  story-dataset-doc.md  story-dataset-manifests.md  story-delta-report.md  story-disk-specialist.md  story-docker-baseline.md  story-entity-gate.md  story-execution-logs-export.md  story-hud-sse-server.md  story-justfile-targets.md  story-memory-specialist.md  story-network-specialist.md  story-output-normalizer.md  story-parse-evtx.md  story-parse-prefetch.md  story-parse-shellbags.md  story-readme-polish.md  story-record-narrative-tool.md  story-record-observation-tool.md  story-regripper.md  story-report-pdf-export.md  story-report-template.md  story-report-verify-links.md  (+12 more)
harness/: delta_report.py  delta_report_models.py  score_case.py  scorer.py  scorer_helpers.py  scorer_models.py
harness/baseline/: __init__.py  install-script-sha256.txt  runner.py
harness/datasets/: README.md  case-trapdoor.manifest.json  nist-data-leakage.manifest.json  nist-hacking-case.manifest.json  nitroba-stub.manifest.json  nitroba.manifest.json  recompute_manifest.py  schema.py  verify_manifest.py
harness/ground_truth/: __init__.py  case_trapdoor_parser.py  cli.py  nist-data-leakage.answer-key-sha256.txt  nist-hacking-case.supplemental.json  nist_data_leakage_parser.py  nist_hacking_case_parser.py  nitroba.handcrafted.json  nitroba_parser.py  rocba.handcrafted.json  rocba_parser.py  schema.py
harness/silentwitness/: __init__.py  case_dir_reader.py  runner.py
npm/silentwitness/: README.md  package.json
research/protocol-sift-2026/: 00-overview.md  01-prizes-tracks.md  02-sponsor-docs.md  03-project-gallery.md  04-competitor-analysis.md  05-prior-winners.md  06-hidden-field.md  07-pre-commit-checklist.md  CONTEXT.md
scripts/: _notices_catalog.py  bootstrap_issues.py  build_example_execution_logs.py  build_notices.py  check_accuracy_report_vocab.py  check_datasets_doc.py  check_readme_gate.py  check_starter_cases_doc.py  check_submission_ready.py  check_try_it_out.py  coverage_gate.py  download_starter_cases.py  egnyte_share.py  itest_citation_loop.py  itest_evidence_slice.py  itest_zeek_slice.py  license_gate.py  render_diagrams.sh  sift_probe.sh  swap_demo_video_url.py
scripts/_example_templates/: report.md
src/silentwitness_agent/: __init__.py  _caching.py  _critic_state.py  cli.py  cli_evidence_flow.py  config.py  contradiction_detectors.py  coverage.py  critic.py  critic_handler.py  critic_trigger.py  hooks.py  hypothesis_tools.py  investigator.py  live_critic.py  model_policy.py
src/silentwitness_common/: __init__.py  atomic_io.py  failure.py  ids.py  types.py  version.py
src/silentwitness_mcp/: __init__.py  __main__.py  _case_env.py  _errors.py  _lifecycle.py  _tool_impls.py  _tool_impls_findings.py  _tool_impls_index.py  _tool_impls_log.py  _tool_impls_memory.py  _tool_stubs.py  envelope.py  server.py
tests/: conftest.py
tests/integration/: _helpers_status.py  conftest.py  test_approve_finding.py  test_approve_finding_crypto.py  test_approve_finding_robustness.py  test_cited_records.py  test_cli_approve.py  test_cli_approve_comma_regression.py  test_cli_approve_non_interactive.py  test_cli_approve_security.py  test_cli_baseline_comparison.py  test_cli_datasets.py  test_cli_export.py  test_cli_index.py  test_cli_init.py  test_cli_install_claude_code.py  test_cli_investigate.py  (+53 more)
(+499 files in other folders)
