[project]
name = "silentwitness"
version = "0.1.0"
description = "A hypothesis-first DFIR investigator whose report writes itself, with every claim locked to the tool that produced it."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Blockchain-Oracle", email = "ajweb3dev@gmail.com" }]
keywords = ["dfir", "incident-response", "forensics", "mcp", "agent", "sift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    # Core MCP + agent stack — audit-corrected pins (CVE closures)
    "mcp>=1.23.0,<2.0",
    # NOTE: `pydantic-ai` is a meta-package that already bundles all providers
    # (anthropic + openai + google + mcp + fastmcp + …) via `pydantic-ai-slim[*]`.
    # The custom extras spec'd in architecture.md (`[anthropic,openai,google,ollama,mcp,fastmcp]`)
    # don't exist on the meta-package — uv warns about each. Using the meta-package
    # plain gets us everything we need, including ollama via openai-compatible.
    # See audit B-PYAI / PR #1 for the correction trail.
    "pydantic-ai>=1.105.0,<2.0.0",
    "pydantic>=2.9",
    # CLI + terminal UI
    "typer>=0.15",
    "rich>=14.1,<16",
    # Report rendering — CVE-closing pins
    "weasyprint>=68.1,<70.0",
    "mistune>=3.2.1",
    # HTTP client (replaces requests)
    "httpx>=0.27",
    # NER for entity gate
    "spacy>=3.8.10,<3.9",
    # Forensic memory toolkit (runs in own venv; this dep is for type checking + integration tests)
    "volatility3==2.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8",
    "hypothesis>=6",
    "coverage[toml]>=7.6",
    "pre-commit>=4",
    "detect-secrets>=1.5",
    "cyclonedx-bom>=7",  # PyPI package is `cyclonedx-bom`; ships the `cyclonedx-py` CLI binary (architecture.md called it `cyclonedx-py` for the package name — a spec slip; the CLI we invoke is still `cyclonedx-py`)
    "pip-licenses>=5",
    "python-semantic-release>=9",
]

[project.scripts]
silentwitness = "silentwitness_agent.cli:app"

[project.urls]
Homepage = "https://github.com/Blockchain-Oracle/silentwitness"
Repository = "https://github.com/Blockchain-Oracle/silentwitness"
Issues = "https://github.com/Blockchain-Oracle/silentwitness/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/silentwitness_mcp",
    "src/silentwitness_agent",
    "src/silentwitness_common",
]

[tool.uv]
required-version = "==0.11.18"

# ----------------------------------------------------------------------
# ruff — see ruff.toml for the actual rule set; we keep tool.ruff minimal
# here so the standalone ruff.toml stays the source of truth.
# ----------------------------------------------------------------------

# ----------------------------------------------------------------------
# Coverage — gates per CICD_SPEC §8
# ----------------------------------------------------------------------
[tool.coverage.run]
source = ["src/silentwitness_mcp", "src/silentwitness_agent", "src/silentwitness_common"]
branch = true
parallel = true
data_file = ".coverage"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 85

# ----------------------------------------------------------------------
# python-semantic-release — see CICD_SPEC §7.3
# ----------------------------------------------------------------------
[tool.semantic_release]
version_variables = ["src/silentwitness_mcp/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
upload_to_pypi = false
upload_to_release = true
commit_parser = "conventional"
allowed_tags = [
    "feat", "fix", "perf", "refactor", "docs", "test",
    "build", "ci", "chore", "style", "revert",
]
allowed_scopes = [
    "mcp", "agent", "hypothesis", "report", "verify",
    "audit", "harness", "docs", "ci", "deps",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

# ----------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: end-to-end tests against real evidence (skipped by default)",
    "property: hypothesis property-based tests",
    "slow: takes more than 10s",
]

# ----------------------------------------------------------------------
# hypothesis profiles
# ----------------------------------------------------------------------
[tool.hypothesis]
deadline = 5000
